Fixing layout bug in reason grid items with the donate button

--- a/app/assets/stylesheets/components/_blocks.scss
+++ b/app/assets/stylesheets/components/_blocks.scss
@@ -607,6 +607,7 @@
       }
       .donate {
         margin: 1em 0;
+        display: block; 
       }
       p {
         font-size: 1em;
